--- a/views/employee/employee_index.jade
+++ b/views/employee/employee_index.jade
@@ -1,10 +1,10 @@
-extends layout/layout
+extends ../layout/layout
 
 block content
 	<h1>Welcome</h1>
 	<div id="info_wrapper">
 		
-		<div id="employee_jobs_news"></div>
-		<div id="employee_jobs_cvs"></div>
+	<div id="employee_jobs_news"></div>
+	<div id="employee_jobs_cvs"></div>
 
 	</div>
