--- a/views/employee/employee_profile.jade
+++ b/views/employee/employee_profile.jade
@@ -1,11 +1,10 @@
-extends layout/layout
+extends ../layout/layout
 
 block content
 	<h1>Profile</h1>
 	<div id="edit_resume_from_wrapper">
 		
-		<form class="form-horizontal" action="" method="post" autocomplete="on"
-                  onsubmit="return false">
+		<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 			
 			<div id="form_element_wrapper">
 	            <label id="name_label">
