--- a/views/employee/employee_resumes.jade
+++ b/views/employee/employee_resumes.jade
@@ -1,7 +1,7 @@
-extends layout/layout
+extends ../layout/layout
 
 block content
-	<h1>Welcome</h1>
-		<div id="resumes_list_wrapper">
-			
-		</div>
+	<h1>Resumes</h1>
+	<div id="resumes_list_wrapper">
+		
+	</div>
