--- a/views/employee/employee_resume_new.jade
+++ b/views/employee/employee_resume_new.jade
@@ -4,8 +4,7 @@ block content
 	<h1>Create new resume</h1>
 	<div id="create_resume_from_wrapper">
 		
-		<form class="form-horizontal" action="" method="post" autocomplete="on"
-                  onsubmit="return false">
+		<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 			
 			<div id="form_element_wrapper">
 	            <label id="name_label">
