--- a/views/employee/employee_profile.html
+++ b/views/employee/employee_profile.html
@@ -2,7 +2,7 @@ extends ../layout/layout
 
 block content
 	<h1>Profile</h1>
-	<div id="edit_resume_from_wrapper">
+	<div id="profile_from_wrapper">
 		
 		<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 			
