--- a/views/employer/employer_position_edit.html
+++ b/views/employer/employer_position_edit.html
@@ -24,27 +24,11 @@ block content
             </div>
 
             <div id="form_element_wrapper">
-	            <label id="skills_label">
-	            	Skills
+	            <label id="requirements_label">
+	            	Requirements
 	            </label>
 
-	            <input type="textarea" name="skills" id="input_skills">
-            </div>
-
-            <div id="form_element_wrapper">
-	            <label id="experience_label">
-	            	Experience
-	            </label>
-
-	            <input type="textarea" name="experience" id="input_experience">
-            </div>
-
-			<div id="form_element_wrapper">
-	            <label id="education_label">
-	            	Education
-	            </label>
-
-	            <input type="textarea" name="education" id="input_education">
+	            <input type="textarea" name="requirements" id="input_requirements">
             </div>
 
 
@@ -56,5 +40,12 @@ block content
 	            <input type="textarea" name="salary" id="input_salary">
             </div>
 
+            <div id="form_element_wrapper">
+	            <label id="location_label">
+	            	Location
+	            </label>
+
+	            <input type="textarea" name="experience" id="location_experience">
+            </div>
 		</form>
 	</div>
