--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
-extends layout/layout
+{% extends 'layout/layout.html' %}
 
-block content
-  h1 asdsads
-  p Welcome to #{title}
+{% block content %} 
+<h2>Index file</h2>
+{% endblock %}
