--- a/views/employee/employee_profile.html
+++ b/views/employee/employee_profile.html
@@ -1,6 +1,7 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
+
 	<h1>Profile</h1>
 	<div id="profile_from_wrapper">
 		
@@ -48,3 +49,5 @@ block content
 
 		</form>
 	</div>
+
+{% endblock %}
