--- a/views/employee/employee_resume_edit.html
+++ b/views/employee/employee_resume_edit.html
@@ -1,6 +1,6 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
 	<h1>Edit resume</h1>
 	<div id="edit_resume_from_wrapper">
 		
@@ -58,3 +58,5 @@ block content
 
 		</form>
 	</div>
+
+{% endblock %}
