--- a/views/employee/employee_resume_new.html
+++ b/views/employee/employee_resume_new.html
@@ -1,6 +1,6 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
 	<h1>Create new resume</h1>
 	<div id="create_resume_from_wrapper">
 		
@@ -57,3 +57,5 @@ block content
 
 		</form>
 	</div>
+
+{% endblock %}
