--- a/views/employee/employee_index.html
+++ b/views/employee/employee_index.html
@@ -1,10 +1,12 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
-	<h1>Welcome</h1>
-	<div id="info_wrapper">
-		
-	<div id="employee_jobs_news"></div>
-	<div id="employee_jobs_cvs"></div>
+{% block content %} 
 
-	</div>
+<h1>Welcome</h1>
+<div id="info_wrapper">
+	
+<div id="employee_jobs_news"></div>
+<div id="employee_jobs_cvs"></div>
+
+</div>
+{% endblock %}
