--- a/views/employee/employee_resumes.html
+++ b/views/employee/employee_resumes.html
@@ -1,7 +1,9 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %}
 	<h1>Resumes</h1>
 	<div id="resumes_list_wrapper">
 		
 	</div>
+
+{% endblock %}
