--- a/views/employer/employer_index.html
+++ b/views/employer/employer_index.html
@@ -1,9 +1,10 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
     <h1>Welcome</h1>
     <div id="info_wrapper">
         
     <div id="employer_resumes_news"></div>
 
     </div>
+  {% endblock %}
