--- a/views/employer/employer_position_edit.html
+++ b/views/employer/employer_position_edit.html
@@ -1,6 +1,6 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
 	<h1>Edit resume</h1>
 	<div id="edit_resume_from_wrapper">
 		
@@ -49,3 +49,4 @@ block content
             </div>
 		</form>
 	</div>
+{% endblock %}
