--- a/views/employer/employer_position_new.html
+++ b/views/employer/employer_position_new.html
@@ -1,6 +1,6 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
 	<h1>Create new position</h1>
 	<div id="create_position_from_wrapper">
 		
@@ -48,3 +48,4 @@ block content
 
 		</form>
 	</div>
+{% endblock %}
