--- a/views/employer/employer_profile.html
+++ b/views/employer/employer_profile.html
@@ -1,6 +1,6 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
 	<h1>Profile</h1>
 	<div id="profile_from_wrapper">
 		
@@ -41,3 +41,4 @@ block content
 
 		</form>
 	</div>
+{% endblock %}
