--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -5,7 +5,15 @@
         <title>{% block title %}work{% endblock %}</title>
 
         {% block head %}
-            <link rel="stylesheet" href="main.css">
+            <link rel="stylesheet" href="/public/stylesheets/framefork/bootstrap-theme.css">
+            <link rel="stylesheet" href="/public/stylesheets/framefork/bootstrap-theme.min.css">
+            <link rel="stylesheet" href="/public/stylesheets/framefork/bootstrap.css">
+            <link rel="stylesheet" href="/public/stylesheets/framefork/bootstrap.min.css">
+            <link rel="stylesheet" href="/public/stylesheets/styles.css">
+            <link rel="javascript" href="/public/javascripts/framework/bootstrap.js">
+            <link rel="javascript" href="/public/javascripts/framework/bootstrap.min.js">
+            <link rel="javascript" href="/public/javascripts/framework/npm.js">
+            
         {% endblock %}
     </head>
     <body>
