--- a/views/employer/employer_positions.html
+++ b/views/employer/employer_positions.html
@@ -1,7 +1,8 @@
-extends ../layout/layout
+{% extends '../layout/layout.html' %}
 
-block content
+{% block content %} 
 	<h1>Positions</h1>
 	<div id="positions_list_wrapper">
 		
 	</div>
+{% endblock %}
