--- a/views/employee/employee_index.html
+++ b/views/employee/employee_index.html
@@ -9,4 +9,10 @@
 <div id="employee_jobs_cvs"></div>
 
 </div>
+
+ <link rel="stylesheet" href="/stylesheets/client/employee.css"/>
+            
+ <script rel="text/javascript" src="/javascripts/client/employee.js"/>
+ <script rel="text/javascript" src="/javascripts/view/employee.js"/>
+
 {% endblock %}
