--- a/views/employer/employer_index.html
+++ b/views/employer/employer_index.html
@@ -7,4 +7,10 @@
     <div id="employer_resumes_news"></div>
 
     </div>
+
+ <link rel="stylesheet" href="/stylesheets/client/employer.css"/>
+            
+ <script rel="text/javascript" src="/javascripts/client/employer.js"/>
+ <script rel="text/javascript" src="/javascripts/view/employer.js"/>
+ 
   {% endblock %}
