--- a/views/employer/employer_profile.html
+++ b/views/employer/employer_profile.html
@@ -2,7 +2,7 @@
 
 {% block content %} 
 	<h1>Profile</h1>
-	<div id="profile_from_wrapper">
+	<div id="employer_profile_from_wrapper">
 		
 		<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 			
