--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -1,10 +1,7 @@
-<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{% block title %}work{% endblock %}</title>
-
-        {% block head %}
+        <title>Work</title>
             <link rel="stylesheet" href="/stylesheets/framework/bootstrap-theme.css"/>
             <link rel="stylesheet" href="/stylesheets/framework/bootstrap-theme.min.css"/>
             <link rel="stylesheet" href="/stylesheets/framework/bootstrap.css"/>
@@ -16,16 +13,19 @@
             <!--script rel="text/javascript" src="/javascripts/framework/bootstrap.js"/-->
             <script rel="text/javascript" src="/javascripts/framework/bootstrap.min.js"/>
             <script rel="text/javascript" src="/javascripts/framework/npm.js"/>
+            <script rel="text/javascript" src="/javascripts/framework/mustache.min.js"/>
 
             <script rel="text/javascript" src="/javascripts/client/layout.js"/>
             <script rel="text/javascript" src="/javascripts/view/layout.js"/>
             <script rel="text/javascript" src="/javascripts/client/requestMaker.js"/>
             <script rel="text/javascript" src="/javascripts/client/config.js"/>
-        {% endblock %}
     </head>
     <body>
-        {% block header %}<h1>Header</h1>{% endblock %}
-        {% block content %}<h1>Content</h1>{% endblock %}
-        {% block footer %}<h1>Footer</h1>{% endblock %}
+
+        <% include header %>
+
+        <%- body %>
+
+        <% include footer %>
     </body>
 </html>
