--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <% include header %>
+<% layout('layout/layout') -%>
+<%= title %>
+<p>Welcome to <%= title %></p>
+  
