--- a/views/employee/employee_profile.ejs
+++ b/views/employee/employee_profile.ejs
@@ -1,53 +1,49 @@
-{% extends '../layout/layout.html' %}
+<% layout('../layout/layout') -%>
 
-{% block content %} 
-
-	<h1>Profile</h1>
-	<div id="profile_from_wrapper">
+<h1>Profile</h1>
+<div id="profile_from_wrapper">
+	
+	<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 		
-		<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
-			
-			<div id="form_element_wrapper">
-	            <label id="name_label">
-	            	Name
-	            </label>
+		<div id="form_element_wrapper">
+            <label id="name_label">
+            	Name
+            </label>
 
-	            <input type="text" name="name" id="input_name">
-            </div>
+            <input type="text" name="name" id="input_name">
+        </div>
 
-	        <div id="form_element_wrapper">   
-	            <label id="category_label">
-	            	Category
-	            </label>
+        <div id="form_element_wrapper">   
+            <label id="category_label">
+            	Category
+            </label>
 
-	            <input type="textarea" name="category" id="input_category">
-            </div>
+            <input type="textarea" name="category" id="input_category">
+        </div>
 
-            <div id="form_element_wrapper">
-	            <label id="status_label">
-	            	Status
-	            </label>
+        <div id="form_element_wrapper">
+            <label id="status_label">
+            	Status
+            </label>
 
-	            <input talaryype="textarea" name="status" id="input_status">
-            </div>
+            <input talaryype="textarea" name="status" id="input_status">
+        </div>
 
-            <div id="form_element_wrapper">
-	            <label id="email_label">
-	            	Email
-	            </label>
+        <div id="form_element_wrapper">
+            <label id="email_label">
+            	Email
+            </label>
 
-	            <input type="textarea" name="experience" id="input_email">
-            </div>
+            <input type="textarea" name="experience" id="input_email">
+        </div>
 
-			<div id="form_element_wrapper">
-	            <label id="phone_label">
-	            	Phote
-	            </label>
+		<div id="form_element_wrapper">
+            <label id="phone_label">
+            	Phote
+            </label>
 
-	            <input type="textarea" name="education" id="input_phone">
-            </div>
+            <input type="textarea" name="education" id="input_phone">
+        </div>
 
-		</form>
-	</div>
-
-{% endblock %}
+	</form>
+</div>
