--- a/views/employee/employee_resume_new.ejs
+++ b/views/employee/employee_resume_new.ejs
@@ -1,61 +1,57 @@
-{% extends '../layout/layout.html' %}
-
-{% block content %} 
-	<h1>Create new resume</h1>
-	<div id="create_resume_from_wrapper">
+<% layout('../layout/layout') -%>
+<h1>Create new resume</h1>
+<div id="create_resume_from_wrapper">
+	
+	<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 		
-		<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
-			
-			<div id="form_element_wrapper">
-	            <label id="name_label">
-	            	Name
-	            </label>
+		<div id="form_element_wrapper">
+            <label id="name_label">
+            	Name
+            </label>
 
-	            <input type="text" name="name" id="input_name_new">
-            </div>
+            <input type="text" name="name" id="input_name_new">
+        </div>
 
-	        <div id="form_element_wrapper">   
-	            <label id="description_label">
-	            	Description
-	            </label>
+        <div id="form_element_wrapper">   
+            <label id="description_label">
+            	Description
+            </label>
 
-	            <input type="textarea" name="description" id="input_description_new">
-            </div>
+            <input type="textarea" name="description" id="input_description_new">
+        </div>
 
-            <div id="form_element_wrapper">
-	            <label id="skills_label">
-	            	Skills
-	            </label>
+        <div id="form_element_wrapper">
+            <label id="skills_label">
+            	Skills
+            </label>
 
-	            <input type="textarea" name="skills" id="input_skills_new">
-            </div>
+            <input type="textarea" name="skills" id="input_skills_new">
+        </div>
 
-            <div id="form_element_wrapper">
-	            <label id="experience_label">
-	            	Experience
-	            </label>
+        <div id="form_element_wrapper">
+            <label id="experience_label">
+            	Experience
+            </label>
 
-	            <input type="textarea" name="experience" id="input_experience_new">
-            </div>
+            <input type="textarea" name="experience" id="input_experience_new">
+        </div>
 
-			<div id="form_element_wrapper">
-	            <label id="education_label">
-	            	Education
-	            </label>
+		<div id="form_element_wrapper">
+            <label id="education_label">
+            	Education
+            </label>
 
-	            <input type="textarea" name="education" id="input_education_new">
-            </div>
+            <input type="textarea" name="education" id="input_education_new">
+        </div>
 
 
-			<div id="form_element_wrapper">
-	            <label id="salary_label">
-	            	Salary
-	            </label>
+		<div id="form_element_wrapper">
+            <label id="salary_label">
+            	Salary
+            </label>
 
-	            <input type="textarea" name="salary" id="input_salary_new">
-            </div>
+            <input type="textarea" name="salary" id="input_salary_new">
+        </div>
 
-		</form>
-	</div>
-
-{% endblock %}
+	</form>
+</div>
