--- a/views/employee/employee_resumes.ejs
+++ b/views/employee/employee_resumes.ejs
@@ -1,9 +1,5 @@
-{% extends '../layout/layout.html' %}
-
-{% block content %}
-	<h1>Resumes</h1>
-	<div id="resumes_list_wrapper">
-		
-	</div>
-
-{% endblock %}
+<% layout('../layout/layout') -%>
+<h1>Resumes</h1>
+<div id="resumes_list_wrapper">
+	
+</div>
