--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -11,6 +11,8 @@
             <link rel="stylesheet" href="/stylesheets/view/style.css"/>
             <link rel="stylesheet" href="/stylesheets/client/layout.css"/>
 
+            <%- stylesheets %>
+
             <!--script rel="text/javascript" src="/javascripts/framework/bootstrap.js"/-->
             <script type="text/javascript" src="/javascripts/framework/bootstrap.min.js"></script>
             <script type="text/javascript" src="/javascripts/framework/npm.js"></script>
@@ -20,6 +22,9 @@
             <script type="text/javascript" src="/javascripts/view/layout.js"></script>
             <script type="text/javascript" src="/javascripts/client/requestMaker.js"></script>
             <script type="text/javascript" src="/javascripts/client/config.js"></script>
+
+            <%- scripts %>
+
     </head>
     <body>
 
