--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -15,6 +15,7 @@
 
             <!--script rel="text/javascript" src="/javascripts/framework/bootstrap.js"/-->
             <script type="text/javascript" src="/javascripts/framework/bootstrap.min.js"></script>
+            <script type="text/javascript" src="/javascripts/framework/jquery-2.1.4.js"></script>
             <script type="text/javascript" src="/javascripts/framework/npm.js"></script>
             <script type="text/javascript" src="/javascripts/framework/mustache.min.js"></script>
 
