--- a/views/employee/employee_profile.ejs
+++ b/views/employee/employee_profile.ejs
@@ -34,15 +34,15 @@
             	Email
             </label>
 
-            <input type="textarea" name="experience" id="input_email">
+            <input type="textarea" name="email" id="input_email">
         </div>
 
 		<div id="form_element_wrapper">
             <label id="phone_label">
-            	Phote
+            	Phone
             </label>
 
-            <input type="textarea" name="education" id="input_phone">
+            <input type="textarea" name="phone" id="input_phone">
         </div>
 
 	</form>
