--- a/views/employee/employee_index.ejs
+++ b/views/employee/employee_index.ejs
@@ -1,12 +1,10 @@
 <% layout('../layout/layout') -%>
 <h1>Welcome employee</h1>
-<h2><h2>
-<div id="info_wrapper">
+<h2></h2>
+<div id="info_wrapper"></div>
 	
 <div id="employee_jobs_news"></div>
 <div id="employee_jobs_cvs"></div>
-
-</div>
 
 
 <% stylesheet('/stylesheets/client/employee.css') -%>
