--- a/views/employee/employee_resume_edit.ejs
+++ b/views/employee/employee_resume_edit.ejs
@@ -56,3 +56,11 @@
 
 	</form>
 </div>
+<script type="text/javascript">
+    initResume();
+</script>
+
+<% stylesheet('/stylesheets/client/employee.css') -%>
+
+<% script('/javascripts/client/employee.js') -%>   
+<% script('/javascripts/view/employee.js') -%>     
