--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,3 @@
-{% extends 'layout/layout.html' %}
-
-{% block content %}
-	<h1> {{ message }} </h1>
-	<h2> {{ error.status }} </h2>
-	<pre> {{ error.stack }} </pre>
-{% endblock %}
+<h1>
+	Error was found
+</h1>
