--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,1 +1,5 @@
-<h1>Header</h1>
+<footer class="footer">
+      <div class="container">
+        <p class="text-muted">Place sticky footer content here.</p>
+      </div>
+</footer>
