--- a/views/employee/employee_resume_edit.ejs
+++ b/views/employee/employee_resume_edit.ejs
@@ -1,61 +1,11 @@
 <% layout('../layout/layout') -%>
 <h1>Edit resume</h1>
 <div id="edit_resume_from_wrapper">
-	
-	<form class="form-horizontal" action="" method="post" autocomplete="on"
-              onsubmit="return false">
-		
-		<div id="form_element_wrapper">
-            <label id="name_label">
-            	Name
-            </label>
 
-            <input type="text" name="name" id="input_name">
-        </div>
-
-        <div id="form_element_wrapper">   
-            <label id="description_label">
-            	Description
-            </label>
-
-            <input type="textarea" name="description" id="input_description">
-        </div>
-
-        <div id="form_element_wrapper">
-            <label id="skills_label">
-            	Skills
-            </label>
-
-            <input type="textarea" name="skills" id="input_skills">
-        </div>
-
-        <div id="form_element_wrapper">
-            <label id="experience_label">
-            	Experience
-            </label>
-
-            <input type="textarea" name="experience" id="input_experience">
-        </div>
-
-		<div id="form_element_wrapper">
-            <label id="education_label">
-            	Education
-            </label>
-
-            <input type="textarea" name="education" id="input_education">
-        </div>
-
-
-		<div id="form_element_wrapper">
-            <label id="salary_label">
-            	Salary
-            </label>
-
-            <input type="textarea" name="salary" id="input_salary">
-        </div>
-
-	</form>
 </div>
+
+ <% include ../templates/editResumeEmployee %>
+
 <script type="text/javascript">
     initResume();
 </script>
