Employer HTML-> EJS

--- a/views/employer/employer_position_edit.ejs
+++ b/views/employer/employer_position_edit.ejs
@@ -1,6 +1,5 @@
-{% extends '../layout/layout.html' %}
+<% layout('../layout/layout') -%>
 
-{% block content %} 
 	<h1>Edit resume</h1>
 	<div id="edit_position_from_wrapper">
 		
@@ -50,4 +49,3 @@
 		</form>
 	</div>
  
-{% endblock %}
