--- a/views/employer/employer_position_new.ejs
+++ b/views/employer/employer_position_new.ejs
@@ -1,6 +1,4 @@
-{% extends '../layout/layout.html' %}
-
-{% block content %} 
+<% layout('../layout/layout') -%>
 	<h1>Create new position</h1>
 	<div id="create_position_from_wrapper">
 		
@@ -48,4 +46,3 @@
 
 		</form>
 	</div>
-{% endblock %}
