--- a/views/employer/employer_profile.ejs
+++ b/views/employer/employer_profile.ejs
@@ -1,6 +1,4 @@
-{% extends '../layout/layout.html' %}
-
-{% block content %} 
+<% layout('../layout/layout') -%>
 	<h1>Profile</h1>
 	<div id="employer_profile_from_wrapper">
 		
@@ -41,4 +39,3 @@
 
 		</form>
 	</div>
-{% endblock %}
