--- a/views/employee/employee_profile.ejs
+++ b/views/employee/employee_profile.ejs
@@ -3,47 +3,15 @@
 <h1>Profile</h1>
 <div id="profile_from_wrapper">
 	
-	<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
-		
-		<div id="form_element_wrapper">
-            <label id="name_label">
-            	Name
-            </label>
-
-            <input type="text" name="name" id="input_name">
-        </div>
-
-        <div id="form_element_wrapper">   
-            <label id="category_label">
-            	Category
-            </label>
-
-            <input type="textarea" name="category" id="input_category">
-        </div>
-
-        <div id="form_element_wrapper">
-            <label id="status_label">
-            	Status
-            </label>
-
-            <input talaryype="textarea" name="status" id="input_status">
-        </div>
-
-        <div id="form_element_wrapper">
-            <label id="email_label">
-            	Email
-            </label>
-
-            <input type="textarea" name="email" id="input_email">
-        </div>
-
-		<div id="form_element_wrapper">
-            <label id="phone_label">
-            	Phone
-            </label>
-
-            <input type="textarea" name="phone" id="input_phone">
-        </div>
-
-	</form>
 </div>
+
+<% include ../templates/editProfileEmployee %>
+
+<script type="text/javascript">
+    initProfile();
+</script>
+
+<% stylesheet('/stylesheets/client/employee.css') -%>
+
+<% script('/javascripts/client/employee.js') -%>   
+<% script('/javascripts/view/employee.js') -%>  
