--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -8,11 +8,25 @@
 </div>
 <div id="navbar" class="navbar-collapse collapse">
   <ul class="nav navbar-nav">
-    <li><a href="/findJob">Find job</a></li>
-    <li><a href="/postResume">Post resume</a></li>
+    <% if (role == "employer") { %>
+      <!-- TODO add url for employer-->
+      <li><a href="/findEmployee">Find employee</a></li>
+      <li><a href="/postVacancy">Post vacancy</a></li> 
+    <% } else {%>
+      <!-- TODO add url for employee-->
+      <li><a href="/findJob">Find job</a></li>
+      <li><a href="/postResume">Post resume</a></li> 
+    <% } %>
   </ul>
   <ul class="nav navbar-nav navbar-right">
-    <li><a href="/login">login</a></li>
+    <% if (auth) { %>
+      <li><a href="/login">login</a></li>
+    <% } else {%>
+      <li>
+        <a href="#">{{name}}</a>
+        <img src="#">{{avatar}}>
+      </li>
+    <% } %>
   </ul>
 </div><!--/.nav-collapse -->
       
