--- a/views/auth/registration.ejs
+++ b/views/auth/registration.ejs
@@ -1,6 +1,6 @@
 <% layout('../layout/layout') -%>
 
-<h1>Registrattion</h1>
+<h1>Registration</h1>
 <form>
     <label>login</label><br>
     <input type="text" name="login" value="login"><br>
