--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,18 +1,31 @@
-<div class="navbar-header">
-  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button>
-  <a class="navbar-brand" href="/">FAST JOB</a>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">FAST JOB</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/findJob">Find job</a></li>
+        <li><a href="/postResume">Post resume</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/login">login</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+<div class="container">
+  <ul class="nav navbar-nav"> 
+      <li><a href="/employee/joby">index</a></li>
+      <li><a href="/employee/joby/profile">profile</a></li>
+      <li><a href="/employee/joby/resume/new">new resume</a></li>
+      <li><a href="/employee/joby/resume/1">edit resume</a></li>
+      <li><a href="/employee/joby/resumes">resumes</a></li>
+    </ul>
 </div>
-<div id="navbar" class="navbar-collapse collapse">
-  <ul class="nav navbar-nav">
-    <li><a href="/findJob">Find job</a></li>
-    <li><a href="/postResume">Post resume</a></li>
-  </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <li><a href="/login">login</a></li>
-  </ul>
-</div><!--/.nav-collapse -->
-      
+    
