--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -28,4 +28,12 @@
       <li><a href="/employee/joby/resumes">resumes</a></li>
     </ul>
 </div>
-    
+<div class="container">
+  <ul class="nav navbar-nav"> 
+      <li><a href="/employer/droom">index</a></li>
+      <li><a href="/employer/droom/profile">profile</a></li>
+      <li><a href="/employer/droom/position/new">new position</a></li>
+      <li><a href="/employer/droom/position/1">edit position</a></li>
+      <li><a href="/employer/droom/positions">position</a></li>
+    </ul>
+</div>
