--- a/views/templates/editProfileEmployer.ejs
+++ b/views/templates/editProfileEmployer.ejs
@@ -1,4 +1,4 @@
-<script type="text/html" id="editProfileEmployee">
+<script type="text/html" id="editProfileEmployer">
 
 	<form id="profile_employer_settings_form" class="form-horizontal" autocomplete="on"
               onsubmit="updateProfileEmployer('{{id}}');return false">
