--- a/views/employer/employer_position_new.ejs
+++ b/views/employer/employer_position_new.ejs
@@ -2,7 +2,7 @@
 	<h1>Create new position</h1>
 	<div id="create_position_from_wrapper">
 		
-		<form class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
+		<form id="position_employer_addition_form" class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 			
 			<div id="form_element_wrapper">
 	            <label id="name_label">
@@ -46,3 +46,8 @@
 
 		</form>
 	</div>
+
+<% stylesheet('/stylesheets/client/employer.css') -%>
+
+<% script('/javascripts/client/employer.js') -%>
+<% script('/javascripts/view/employer.js') -%>   
