--- a/views/employer/employer_position_new.ejs
+++ b/views/employer/employer_position_new.ejs
@@ -1,7 +1,6 @@
 <% layout('../layout/layout') -%>
-	<h1>Create new position</h1>
-	<div id="create_position_from_wrapper">
-		
+	<h1>Create new position</h1>	
+	<div id="create_position_from_wrapper">	
 		<form id="position_employer_addition_form" class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 			
 			<div id="form_element_wrapper">
@@ -38,7 +37,7 @@
 
 			<div id="form_element_wrapper">
 	            <label id="location_label">
-	            	Education
+	            	Location
 	            </label>
 
 	            <input type="textarea" name="location" id="input_location_new">
