--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -57,3 +57,13 @@
       <li><a href="/employer/droom/positions">position</a></li>
     </ul>
 </div>
+
+<div class="container">
+  <ul class="nav navbar-nav"> 
+      <li><a href="/employee/joby">index</a></li>
+      <li><a href="/employee/joby/profile">profile</a></li>
+      <li><a href="/employee/joby/resume/new">new resume</a></li>
+      <li><a href="/employee/joby/resume/1">edit resume</a></li>
+      <li><a href="/employee/joby/resumes">resumes</a></li>
+    </ul>
+</div>
