--- a/views/templates/editPositionEmployer.ejs
+++ b/views/templates/editPositionEmployer.ejs
@@ -8,7 +8,7 @@
 	            	Name
 	            </label>
 
-	            <input type="text" name="name" id="input_name">
+	            <input type="text" name="name" id="input_name" value="{{name}}">
             </div>
 
 	        <div id="form_element_wrapper">   
@@ -16,7 +16,7 @@
 	            	Description
 	            </label>
 
-	            <input type="textarea" name="description" id="input_description">
+	            <input type="textarea" name="description" id="input_description" value="{{description}}">
             </div>
 
             <div id="form_element_wrapper">
@@ -24,7 +24,7 @@
 	            	Requirements
 	            </label>
 
-	            <input type="textarea" name="requirements" id="input_requirements">
+	            <input type="textarea" name="requirements" id="input_requirements" value="{{requirements}}">
             </div>
 
 
@@ -33,7 +33,7 @@
 	            	Salary
 	            </label>
 
-	            <input type="textarea" name="salary" id="input_salary">
+	            <input type="textarea" name="salary" id="input_salary" value="{{salary}}">
             </div>
 
             <div id="form_element_wrapper">
@@ -41,7 +41,7 @@
 	            	Location
 	            </label>
 
-	            <input type="textarea" name="experience" id="location_experience">
+	            <input type="textarea" name="experience" id="location_experience" value="{{location}}">
             </div>
 		</form>
  
