add crypto auth

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 <% layout('../layout/layout') -%>
 <h1>Login</h1>
-<form method='POST' action="login">
+<form method='POST' action="/api/auth/login">
 	<label>login</label><br>
 	<input type="text" name="login" value="login"><br>
 	<label>password</label><br>
