--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -39,7 +39,7 @@
         <img src="#">{{avatar}}>
       </li>
       <li>
-        <a href="/auth/logout">Logout</a>
+        <a href="/api/auth/logout">Logout</a>
       </li>
     <% } else { %>
       <li><a href="/auth/login">Login</a></li>
