--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -43,7 +43,7 @@
       </li>
     <% } else { %>
       <li><a href="/auth/login">Login</a></li>
-      <li><a href="/auth/registration">Sing In</a></li>
+      <li><a href="/auth/registration">Sign Up</a></li>
     <% } %>
   </ul>
 </div><!--/.nav-collapse -->
