--- a/views/employer/employer_positions.ejs
+++ b/views/employer/employer_positions.ejs
@@ -13,4 +13,4 @@
 <% stylesheet('/stylesheets/client/employer.css') -%>
 
 <% script('/javascripts/client/employer.js') -%>
-<% script('/javascripts/view/employer.js') -%>gt
+<% script('/javascripts/view/employer.js') -%>
