--- a/views/employee/employee_resumes.ejs
+++ b/views/employee/employee_resumes.ejs
@@ -1,5 +1,20 @@
 <% layout('../layout/layout') -%>
-<h1>Resumes</h1>
+<div class="page-header">
+	<h1>Resumes</h1>
+</div>
+
+<% include ../templates/showResumes %>
+
 <div id="resumes_list_wrapper">
 	
 </div>
+
+<script type="text/javascript">
+	    showResumes();
+</script>
+
+
+<% stylesheet('/stylesheets/client/employee.css') -%>
+
+<% script('/javascripts/client/employee.js') -%>
+<% script('/javascripts/view/employee.js') -%>
