add link to resume

--- a/views/templates/showResumes.ejs
+++ b/views/templates/showResumes.ejs
@@ -27,5 +27,6 @@
 	            <span>{{salary}}</span>
 	      	</li>
 	    </ul>
+	    <button class="btn btn-default" onclick="showResumeSettings('{{id}}')">Edit resume</button>
     </div>
 </script>
